# app-nvs-lib

include/app_nvs_lib/: app_nvs_lib.h
samples/app_nvs_lib/: CMakeLists.txt  prj.conf
samples/app_nvs_lib/src/: main.c
src/: app_nvs_lib.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
